src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Address_Flag__c</fullName>
        <label>Address Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__ProductInterest__c</fullName>
        <label>DupeBlocker - Ignore</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <inlineHelpText>campaign id that is passed from Plone form</inlineHelpText>
        <label>Campaign Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <inlineHelpText>Used during the import process, this allows you to set member status for leads on a campaign.</inlineHelpText>
        <label>Campaign Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Preference__c</fullName>
        <label>Communication Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <inlineHelpText>Contact Id passed in from form</inlineHelpText>
        <label>Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Trade__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not trade, rent or otherwise share this person&apos;s contact information with third parties.</inlineHelpText>
        <label>Do Not Trade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donation_Id__c</fullName>
        <label>Donation Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <inlineHelpText>Home City</inlineHelpText>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <inlineHelpText>Home Country</inlineHelpText>
        <label>Home Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_PostalCode__c</fullName>
        <inlineHelpText>Home Zip/Postal Code</inlineHelpText>
        <label>Home Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <inlineHelpText>Home State</inlineHelpText>
        <label>Home State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street__c</fullName>
        <inlineHelpText>Home street address</inlineHelpText>
        <label>Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Date__c</fullName>
        <label>Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <label>Opportunity Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gift</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won Not Thanked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherAddress__c</fullName>
        <label>Other Address</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>InternationalLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>International Leads</label>
        <queue>International Leads</queue>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>USLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>US Leads</label>
        <queue>US Leads</queue>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
</CustomObject>